# booking_app

./: config.py  database.py  exceptions.py  main.py  pyproject.toml
bookings/: models.py  router.py  services.py
hotels/: models.py  router.py  schemas.py  services.py
images/: router.py
migrations/: env.py
migrations/versions/: 1438e0266b40_add_model_bookings.py  146691a88df6_add_model_users.py  16e29aa63b3b_add_model_bookings.py  e254f440704c_initial_migration.py  ebcc55eae3e7_add_model_bookings.py
pages/: router.py
services/: base.py
templates/: hotels.html
users/: auth.py  dependencies.py  models.py  router.py  services.py
